[tool.poetry]
name = "language-learning-app"
version = "0.1.0"
description = ""
authors = ["vladdoroniuk <vlad.doroniuk.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "language_learning_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.3.3"
motor = "^3.1.2"
pydantic = {extras = ["email"], version = "^1.10.8"}
beanie = "^1.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
